--- a/Train_Run_config.yaml
+++ b/Train_Run_config.yaml
@@ -24,8 +24,6 @@
       'min_bases_distance': 10000,
       'env_size':[15000, 15000, 10000],
       'max_size': 30000,
-      'attack_cone': [120, 1000, 5000],
-      'vulnerability_cone': [120, 1000, 5000],
       'collision_distance': 30,
       'dummy': 'line', # 'line', 'curve', 'none', 'mixed', 'random'
       'dummy_turn_radius':5000,
@@ -36,105 +34,201 @@
       'UpAngle_step': 0.001,
       'SideAngle_step': 0.001,
       'screen_size' : [800, 800],
-      'spawning_distance': 2000,
+      'spawning_distance': 3000,
       'spawning_orientations': [[0, 10, -10], [0, 90, -90, 180]],
       'spawning_speeds': [120, 140, 160, 180],
       'reward_versions': {
             1: {
-                'GFW': 0.3,   # Flight Reward Weight
-                'PW': 0.7,    # Pursuit Reward Weight
-                'CW': 0.7,
-                'PW': 0.3,
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
                 'AoA_W': 0.0,
                 'Sideslip_W': 0.0,
                 'Speed_W': 0.5,
                 'Altitude_W': 0.5,
-                'Critical_AoA': 30,
-                'Terminal_AoA': 60,
-                'Critical_Sideslip': 30,
-                'Terminal_Sideslip': 60,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
                 'Critical_Speed': 150.0,
                 'Terminal_Speed': 80.0,
                 'Critical_Altitude': 3500.0,
                 'optimal_zone_width': 1000,
-                'att_tone_bonus': 20.0,
-                'def_tone_bonus': 10,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
                 'Trigger_Penalty': 0.5,
-                'kill_bonus': 1000,
-                'terminal_penalty': 500,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
                 'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
             },
             2: {
-                'GFW': 0.3,   # Flight Reward Weight
-                'PW': 0.7,    # Pursuit Reward Weight
-                'CW': 0.7,
-                'PW': 0.3,
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
                 'AoA_W': 0.0,
                 'Sideslip_W': 0.0,
                 'Speed_W': 0.5,
                 'Altitude_W': 0.5,
-                'Critical_AoA': 30,
-                'Terminal_AoA': 60,
-                'Critical_Sideslip': 30,
-                'Terminal_Sideslip': 60,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
                 'Critical_Speed': 150.0,
                 'Terminal_Speed': 80.0,
                 'Critical_Altitude': 3500.0,
                 'optimal_zone_width': 1000,
-                'att_tone_bonus': 20,
-                'def_tone_bonus': 10,
+                'att_tone_bonus': 1,
+                'def_tone_bonus': 1,
                 'Trigger_Penalty': 0.5,
-                'kill_bonus': 1000,
-                'terminal_penalty': 500,
-                'tan_parameter':2.2  # linear for tan_parameter=5, sparse for tan_parameter=2
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
             },
             3: {
-                'GFW': 0.3,   # Flight Reward Weight
-                'PW': 0.7,    # Pursuit Reward Weight
-                'CW': 0.7,
-                'PW': 0.3,
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
                 'AoA_W': 0.0,
                 'Sideslip_W': 0.0,
                 'Speed_W': 0.5,
                 'Altitude_W': 0.5,
-                'Critical_AoA': 30,
-                'Terminal_AoA': 60,
-                'Critical_Sideslip': 30,
-                'Terminal_Sideslip': 60,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
                 'Critical_Speed': 150.0,
                 'Terminal_Speed': 80.0,
                 'Critical_Altitude': 3500.0,
                 'optimal_zone_width': 1000,
-                'att_tone_bonus': 20.0,
-                'def_tone_bonus': 10,
+                'att_tone_bonus': 2,
+                'def_tone_bonus': 2,
                 'Trigger_Penalty': 0.5,
-                'kill_bonus': 1000,
-                'terminal_penalty': 500,
-                'tan_parameter':3 # linear for tan_parameter=5, sparse for tan_parameter=2
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
             },
             4: {
-                'GFW': 0.3,   # Flight Reward Weight
-                'PW': 0.7,    # Pursuit Reward Weight
-                'CW': 0.7,
-                'PW': 0.3,
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
                 'AoA_W': 0.0,
                 'Sideslip_W': 0.0,
                 'Speed_W': 0.5,
                 'Altitude_W': 0.5,
-                'Critical_AoA': 30,
-                'Terminal_AoA': 60,
-                'Critical_Sideslip': 30,
-                'Terminal_Sideslip': 60,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
                 'Critical_Speed': 150.0,
                 'Terminal_Speed': 80.0,
                 'Critical_Altitude': 3500.0,
                 'optimal_zone_width': 1000,
-                'att_tone_bonus': 20.0,
+                'att_tone_bonus': 5,
+                'def_tone_bonus': 5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            5: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.5,
+                'Altitude_W': 0.5,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 3500.0,
+                'optimal_zone_width': 1000,
+                'att_tone_bonus': 10,
                 'def_tone_bonus': 10,
                 'Trigger_Penalty': 0.5,
-                'kill_bonus': 1000,
-                'terminal_penalty': 500,
-                'tan_parameter':5 # linear for tan_parameter=5, sparse for tan_parameter=2
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            6: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.5,
+                'Altitude_W': 0.5,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 3500.0,
+                'optimal_zone_width': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            7: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.5,
+                'Altitude_W': 0.5,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 3500.0,
+                'optimal_zone_width': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.2  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            8: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 1,
+                'AW': 0,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.5,
+                'Altitude_W': 0.5,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 3500.0,
+                'optimal_zone_width': 1000,
+                'att_tone_bonus': 0,
+                'def_tone_bonus': 0,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':2.5  # linear for tan_parameter=5, sparse for tan_parameter=2
             },
         }
     },
@@ -146,7 +240,7 @@
        'max_speed':343, #speed of sound (after this the aero model is not realistic anymore)
        'max_acc': 20,
        'attack_cone': [120, 1000, 5000],
-       'defence_cone': [120, 1000, 5000],
+       'defence_cone': [200, 1000, 5000],
        'bounding_box': [9413, 8017, 1446],
        'inertia_tensor':
          [ [6.817e3, 0, 0 ],
