--- a/Train_Run_config.yaml
+++ b/Train_Run_config.yaml
@@ -2,7 +2,7 @@
   {
     "WANDB_API_KEY": "1b8b77cc6fc3631890702b9ecbfed2fdc1551347",
     'artifacts_folder': 'Training_Runs',
-    'run_name':'FinalTrain_Pursuit_Experiment_ComplexClosure',
+    'run_name':'FinalTrain_Pursuit_Shaping_DeltaAOABalance',
     'base_checkpoint': '',
     'adversary_base_checkpoint': '',
     'base_policy_restore': [],
@@ -66,22 +66,154 @@
                 'AW': 0.2,
                 'AoA_W': 0.0,
                 'Sideslip_W': 0.0,
-                'Speed_W': 0.5,
-                'Altitude_W': 0.5,
+                'Speed_W': 0.4,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
                 'Critical_AoA': 35,
                 'Terminal_AoA': 70,
                 'Critical_Sideslip': 35,
                 'Terminal_Sideslip': 70,
                 'Critical_Speed': 150.0,
                 'Terminal_Speed': 80.0,
-                'Critical_Altitude': 3500.0,
-                'optimal_zone_width': 1000,
-                'att_tone_bonus': 0,
-                'def_tone_bonus': 0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.1,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
                 'Trigger_Penalty': 0.5,
                 'kill_bonus': 0,
                 'terminal_penalty': 1000,
-                'tan_parameter':3  # linear for tan_parameter=5, sparse for tan_parameter=2
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            2: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.4,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.05,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            3: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.4,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.01,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            4: {
+                'GFW': 0.3,   # Flight Reward Weight
+                'PW': 0.7,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.4,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.1,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            5: {
+                'GFW': 0.4,   # Flight Reward Weight
+                'PW': 0.6,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.0,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.4,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.1,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
+            },
+            6: {
+                'GFW': 0.2,   # Flight Reward Weight
+                'PW': 0.8,    # Pursuit Reward Weight
+                'CW': 0.8,
+                'AW': 0.2,
+                'AoA_W': 0.4,
+                'Sideslip_W': 0.0,
+                'Speed_W': 0.0,
+                'Altitude_W': 0.3,
+                'Smoothing_W': 0.3,
+                'Critical_AoA': 35,
+                'Terminal_AoA': 70,
+                'Critical_Sideslip': 35,
+                'Terminal_Sideslip': 70,
+                'Critical_Speed': 150.0,
+                'Terminal_Speed': 80.0,
+                'Critical_Altitude': 2000,
+                'Critical_Delta': 0.1,
+                'optimal_zone': 1000,
+                'att_tone_bonus': 0.5,
+                'def_tone_bonus': 0.5,
+                'Trigger_Penalty': 0.5,
+                'kill_bonus': 0,
+                'terminal_penalty': 1000,
+                'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
             },
         }
     },
@@ -92,6 +224,7 @@
        'mass': 4000,
        'max_speed':343, #speed of sound (after this the aero model is not realistic anymore)
        'max_acc': 20,
+       'max_thrust': 80000,
        'attack_cone': [120, 1000, 5000],
        'defence_cone': [200, 1000, 5000],
        'bounding_box': [9413, 8017, 1446],
@@ -103,6 +236,8 @@
          # [1.924e-1,3,551e4,4.791e2],
          # [1.671e2,-2.288e-3,4.151e4]],
 
+       'aerobrake_CD': 0.4,
+       'aerobrake_surface': 3,
        'airframe':
          {
            'coefficients':
@@ -147,8 +282,6 @@
          'COF': [ -3, 0, 0 ],
          'surface': 4,
         },
-
-       'max_thrust': 80000,
        "gains": {
             'AoA':      {'kp': 1.2, 'ki': 0, 'kd': 0.8},   # Angle of Attack control
             'sideslip': {'kp': 5, 'ki': 0.1, 'kd': 1.2},   # Lateral balance / sideslip
@@ -167,6 +300,7 @@
       'mass': 0,
        'max_speed':343, #speed of sound (after this the aero model is not realistic anymore)
        'max_acc': 20,
+       'max_thrust': 0,
        'attack_cone': [120, 1000, 5000],
        'defence_cone': [120, 1000, 5000],
        'bounding_box': [0,0,0],
@@ -178,6 +312,8 @@
          # [0,0,0],
          # [0,0,0]],
 
+       'aerobrake_CD': 0.4,
+       'aerobrake_surface': 3,
        'airframe':
          {
            'coefficients':
@@ -222,8 +358,6 @@
          'COF': [ 0, 0, 0 ],
          'surface': 0,
        },
-
-       'max_thrust': 0,
 
        "gains": {
           "AoA": {"kp": 5, "ki": 3, "kd": 1},
