Final Pursuit Code Setup

--- a/Train_Run_config.yaml
+++ b/Train_Run_config.yaml
@@ -2,10 +2,10 @@
   {
     "WANDB_API_KEY": "1b8b77cc6fc3631890702b9ecbfed2fdc1551347",
     'artifacts_folder': 'Training_Runs',
-    'run_name':'FinalTrain_Pursuit_C1',
-    'base_checkpoint': '',
+    'run_name':'FinalTrain_Pursuit_C04',
+    'base_checkpoint': 'Best_C03',
     'adversary_base_checkpoint': '',
-    'base_policy_restore': [],
+    'base_policy_restore': ['team_0'],
     'policies_to_train': ['team_0'],
     'fcnet_hiddens': [256],
     'fcnet_activation': ['relu'],
@@ -15,7 +15,7 @@
     'initial_alpha': [1],
     'tau': [0.005],
     'replay_buffer_capacity': [500000],
-    'num_env_runners': 11,
+    'num_env_runners': 23,
     'num_envs_per_env_runner': 1,
     'num_cpus_per_env_runner': 1,
     'num_gpus_per_env_runner': 0,
@@ -23,7 +23,7 @@
     'sample_timeout_s': 120,
     'batch_size_per_learner': [1200],
     'gamma': [0.99],
-    'train_iterations': 25000,
+    'train_iterations': 20000,
     'checkpoint_freq': 1000,
     'checkpoint_length': 3000, #3000/10 = 300/60 = 5 minutes
 },
@@ -41,18 +41,18 @@
       'stepwise_tone_increment':0.01,
       'tone_threshold':0.5,
       'autotrigger': False,
-      'trigger_threshold': 0,
+      'trigger_threshold': 0.8,
       'min_bases_distance': 10000,
       'env_size':[15000, 15000, 10000],
       'max_size': 30000,
       'collision_distance': 30,
-      'dummy': 'line', # 'line', 'curve', 'none', 'mixed', 'random'
-      'change_speed': False, 
-      'random_change_period_options': [150, 250, 400],
-      'dummy_turn_options': [1000, 2500, 4000, 5000], 
+      'dummy': 'random', # 'line', 'curve', 'none', 'mixed', 'random'
+      'change_speed': True, 
+      'random_change_period_options': [100, 150, 200, 250],
+      'dummy_turn_options': [1000, 1500, 2000, 3000], 
       'dummy_dir_options': [1, -1],
-      'dummy_speed_options': [0, 10, -10, 20, -20],
-      'dummy_kill': False,
+      'dummy_speed_options': [0, 0, 25, -25, 50, -50],
+      'dummy_kill': True,
       'alive_agents_start': 1,
       'speed_step': 0.01,
       'UpAngle_step': 0.001,
@@ -82,8 +82,8 @@
                 'Critical_Delta': 0.1,
                 'optimal_zone': 1000,
                 'att_tone_bonus': 0.5,
-                'def_tone_bonus': 0.5,
-                'trigger_penalty': 0.5,
+                'def_tone_bonus': 1,
+                'trigger_penalty': 0.2,
                 'kill_bonus': 100,
                 'terminal_penalty': 1000,
                 'tan_parameter':3,  # linear for tan_parameter=5, sparse for tan_parameter=2
@@ -98,7 +98,7 @@
        'max_speed':343, #speed of sound (after this the aero model is not realistic anymore)
        'max_acc': 20,
        'max_thrust': 80000,
-       'attack_cone': [120, 1000, 5000],
+       'attack_cone': [90, 1000, 5000],
        'defence_cone': [200, 1000, 5000],
        'bounding_box': [9413, 8017, 1446],
        'inertia_tensor':
